fix: ai-choice 选中按钮 z-index 过大问题

--- a/src/styles/modules/choice.scss
+++ b/src/styles/modules/choice.scss
@@ -63,7 +63,7 @@
           height: $--choice-active-btn-size;
           border-radius: 50%;
           border: 2px solid rgb(180, 176, 176);
-          z-index: 10;
+          z-index: 1;
           padding: 2px;
           box-sizing: border-box;
 
